--- a/main.html
+++ b/main.html
@@ -10,7 +10,35 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<table>
+		<tr class="hea">
+			<th>#</th>
+			<th>Form</th>
+			<th>To</th>
+			<th>Amount($)</th>
+		</tr>
+		<tr>
+			<th>1</th>
+			<td>Mark</td>
+			<td>Otto</td>
+			<td>1000</td>
+		</tr>
+		<tr>
+			<th>2</th>
+			<td>Jacob</td>
+			<td>Thornton</td>
+			<td>1500</td>
+		</tr>
+		<tr>
+			<th>3</th>
+			<td>Jack</td>
+			<td>John</td>
+			<td>2000</td>
+		</tr>
+		<tr class="foo">
+			<td class="foo-val">Total 4000</td>
+		</tr>
+	</table>
 </body>
 
 </html>
